Added verify patch API
