# endpoints/endpoints.go
@@ -11,4 +11,17 @@ const (
 	APIGetRemotesRights = "/remotes/rights"
 	// APIGetRemoteRights fetch remote rights by name
 	APIGetRemoteRights = "/remote/:name/rights"
+	// APIUploadPatch upload to remote
+	APIUploadPatch = "/upload/patch/:name"
+	// APIApplyPatch apply patch to remotes apps
+	APIApplyPatch = "/apply/patch"
+	// APIVerifyPatch verify patch to remotes apps
+	APIVerifyPatch = "/verify/patch"
+	// APIPushCMDToRemote helps to push few commands to remote
+	// APIPushCMDToRemote = "/push/cmd/:name"
 )
+
+type patchbody struct {
+	Remote  string `json:"remote" xml:"remote" form:"remote"`
+	Apptype string `json:"apptype" xml:"apptype" form:"apptype"`
+}
